WIP OpenJ9 SCC population
Signed-off-by: Matt Bentley <mbentley@mbentley.net>